# dify-clone

api/: Dockerfile  app.py  config.py  pyproject.toml
api/core/: __init__.py  conversation_message_task.py
api/core/callback_handler/: agent_loop_gather_callback_handler.py
api/core/callback_handler/entity/: agent_loop.py  chain_result.py
api/core/constant/: llm_constant.py
api/core/llm/: error_handle_wraps.py  llm_builder.py  streamable_chat_open_ai.py  streamable_open_ai.py  token_calculator.py
api/core/llm/provider/: azure_provider.py  base.py  huggingface_provider.py  llm_provider_service.py  openai_provider.py
api/core/memory/: read_only_conversation_token_db_buffer_shared_memory.py
api/core/prompt/: prompt_builder.py  prompts.py
api/extensions/: ext_celery.py  ext_redis.py  ext_sentry.py  ext_session.py  ext_storage.py
api/libs/: helper.py  rsa.py
api/migrations/versions/: 0278e57b8712_apitoken.py  02be43d65367_operation_log.py  12535ddd0771_dataset.py  168b8cf403cc_message.py  1cfcb998da3f_message_agent_thought.py  1d44e14e05e8_end_user.py  2e2b029e3a28_.py  32f08ad5ec8c_conversation.py  4591371e063d_web.py  460d0bfe0842_init.py  47b1273ffa5c_init.py  504311cf9b38_datasetprocessrule.py  54dcdc267ce3_sites.py  54f182845402_task.py  62c0d0824348_.py  8113e02d84e5_.py  b6d1b5ef4c06_api_request.py  b914e55c7ef1_message_feedbacks.py  ce3593b541c4_document.py  d99417150150_provider.py  ec3d8c4a8a21_message_annotation.py  edeb0aabb89b_storage.py
api/models/: account.py  dataset.py  model.py  provider.py  task.py  web.py
web/: Dockerfile  (+2 more)
(+25 files in other folders)
