[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.8",
    "celery>=5.6.0",
    "flask==2.3.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-session2==1.3.1",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=25.9.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentry-sdk>=2.47.0",
]
